--- a/visiobot-project/visiobot-backend/VisioBot_DNN copy.ipynb
+++ b/visiobot-project/visiobot-backend/VisioBot_DNN copy.ipynb
@@ -1728,24 +1728,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statlog Image Segmentation dataset saved as 'statlog_image_segmentation_dataset.csv'\n",
+      "\n",
+      "Statlog Image Segmentation Dataset Metadata:\n",
+      "{'uci_id': 147, 'name': 'Statlog (Image Segmentation)', 'repository_url': 'https://archive.ics.uci.edu/dataset/147/statlog+image+segmentation', 'data_url': 'https://archive.ics.uci.edu/static/public/147/data.csv', 'abstract': 'This dataset is an image segmentation database similar to a database already present in the repository (Image segmentation database) but in a slightly different form.', 'area': 'Other', 'tasks': ['Classification'], 'characteristics': ['Multivariate'], 'num_instances': 2310, 'num_features': 19, 'feature_types': ['Real'], 'demographics': [], 'target_col': ['class'], 'index_col': None, 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 1990, 'last_updated': 'Thu Mar 21 2024', 'dataset_doi': '10.24432/C5P01G', 'creators': [], 'intro_paper': None, 'additional_info': {'summary': 'The instances were drawn randomly from a database of 7 outdoor images.  The images were handsegmented to create a classification for every pixel.  \\r\\n\\r\\nEach instance is a 3x3 region.\\r\\n', 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': '1.  region-centroid-col:  the column of the center pixel of the region.\\r\\n2.  region-centroid-row:  the row of the center pixel of the region.\\r\\n3.  region-pixel-count:  the number of pixels in a region = 9.\\r\\n4.  short-line-density-5:  the results of a line extractoin algorithm that counts how many lines of length 5 (any orientation) with low contrast, less than or equal to 5, go through the region.\\r\\n5.  short-line-density-2:  same as short-line-density-5 but counts lines of high contrast, greater than 5.\\r\\n6.  vedge-mean:  measure the contrast of horizontally adjacent pixels in the region.  There are 6, the mean and standard deviation are given.  This attribute is used as a vertical edge detector.\\r\\n7.  vegde-sd:  (see 6)\\r\\n8.  hedge-mean:  measures the contrast of vertically adjacent pixels. Used for horizontal line detection. \\r\\n9.  hedge-sd: (see 8).\\r\\n10. intensity-mean:  the average over the region of (R + G + B)/3\\r\\n11. rawred-mean: the average over the region of the R value.\\r\\n12. rawblue-mean: the average over the region of the B value.\\r\\n13. rawgreen-mean: the average over the region of the G value.\\r\\n14. exred-mean: measure the excess red:  (2R - (G + B))\\r\\n15. exblue-mean: measure the excess blue:  (2B - (G + R))\\r\\n16. exgreen-mean: measure the excess green:  (2G - (R + B))\\r\\n17. value-mean:  3-d nonlinear transformation of RGB. (Algorithm can be found in Foley and VanDam, Fundamentals of Interactive Computer Graphics)\\r\\n18. saturatoin-mean:  (see 17)\\r\\n19. hue-mean:  (see 17)\\r\\n\\r\\nClasses: \\r\\n1 = brickface, \\r\\n2 = sky, \\r\\n3 = foliage, \\r\\n4 = cement, \\r\\n5 = window, \\r\\n6 = path, \\r\\n7 = grass.\\r\\n', 'citation': None}}\n",
+      "\n",
+      "Statlog Image Segmentation Dataset Variables:\n",
+      "                    name     role        type demographic description units  \\\n",
+      "0    region-centroid-col  Feature     Integer        None        None  None   \n",
+      "1    region-centroid-row  Feature     Integer        None        None  None   \n",
+      "2     region-pixel-count  Feature     Integer        None        None  None   \n",
+      "3   short-line-density-5  Feature     Integer        None        None  None   \n",
+      "4   short-line-density-2  Feature     Integer        None        None  None   \n",
+      "5             vedge-mean  Feature  Continuous        None        None  None   \n",
+      "6               vedge-sd  Feature  Continuous        None        None  None   \n",
+      "7             hedge-mean  Feature  Continuous        None        None  None   \n",
+      "8               hedge-sd  Feature  Continuous        None        None  None   \n",
+      "9         intensity-mean  Feature  Continuous        None        None  None   \n",
+      "10           rawred-mean  Feature  Continuous        None        None  None   \n",
+      "11          rawblue-mean  Feature  Continuous        None        None  None   \n",
+      "12         rawgreen-mean  Feature  Continuous        None        None  None   \n",
+      "13            exred-mean  Feature  Continuous        None        None  None   \n",
+      "14           exblue-mean  Feature  Continuous        None        None  None   \n",
+      "15          exgreen-mean  Feature  Continuous        None        None  None   \n",
+      "16            value-mean  Feature  Continuous        None        None  None   \n",
+      "17       saturation-mean  Feature  Continuous        None        None  None   \n",
+      "18              hue-mean  Feature  Continuous        None        None  None   \n",
+      "19                 class   Target     Integer        None        None  None   \n",
+      "\n",
+      "   missing_values  \n",
+      "0              no  \n",
+      "1              no  \n",
+      "2              no  \n",
+      "3              no  \n",
+      "4              no  \n",
+      "5              no  \n",
+      "6              no  \n",
+      "7              no  \n",
+      "8              no  \n",
+      "9              no  \n",
+      "10             no  \n",
+      "11             no  \n",
+      "12             no  \n",
+      "13             no  \n",
+      "14             no  \n",
+      "15             no  \n",
+      "16             no  \n",
+      "17             no  \n",
+      "18             no  \n",
+      "19             no  \n"
+     ]
+    }
+   ],
    "source": [
+    "# Try to import ucimlrepo, install if not available\n",
     "try:\n",
-    "    from ucimlrepo import fetch_ucirepo  \n",
+    "    from ucimlrepo import fetch_ucirepo\n",
     "except ImportError:\n",
     "    import os\n",
     "    os.system(\"pip install ucimlrepo\")\n",
-    "    from ucimlrepo import fetch_ucirepo  \n",
+    "    from ucimlrepo import fetch_ucirepo\n",
     "\n",
     "import pandas as pd\n",
-    "mushroom = fetch_ucirepo(id=73)  \n",
-    "X = mushroom.data.features  \n",
-    "y = mushroom.data.targets  \n",
-    "dataset = pd.concat([X, y], axis=1)\n",
-    "csv_filename = \"mushroom_dataset.csv\"\n",
-    "dataset.to_csv(csv_filename, index=False)"
+    "\n",
+    "# ========== Statlog (Image Segmentation) Dataset ==========\n",
+    "statlog_image_segmentation = fetch_ucirepo(id=147)\n",
+    "\n",
+    "# Combine features and targets\n",
+    "X_segmentation = statlog_image_segmentation.data.features\n",
+    "y_segmentation = statlog_image_segmentation.data.targets\n",
+    "dataset_segmentation = pd.concat([X_segmentation, y_segmentation], axis=1)\n",
+    "\n",
+    "# Save to CSV\n",
+    "segmentation_csv = \"statlog_image_segmentation_dataset.csv\"\n",
+    "dataset_segmentation.to_csv(segmentation_csv, index=False)\n",
+    "print(f\"Statlog Image Segmentation dataset saved as '{segmentation_csv}'\")\n",
+    "\n",
+    "# Print metadata and variable info\n",
+    "print(\"\\nStatlog Image Segmentation Dataset Metadata:\")\n",
+    "print(statlog_image_segmentation.metadata)\n",
+    "\n",
+    "print(\"\\nStatlog Image Segmentation Dataset Variables:\")\n",
+    "print(statlog_image_segmentation.variables)\n"
    ]
   },
   {
@@ -1793,7 +1864,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "current",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
