--- a/visiobot-project/visiobot-backend/VisioBot_DNN.ipynb
+++ b/visiobot-project/visiobot-backend/VisioBot_DNN.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
     "import joblib \n",
     "\n",
     "df = pd.read_csv(\"modifiedDataset_WithDIM.csv\")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
     "    \"Feature Name\": df.columns,\n",
     "    \"Data Type\": df.dtypes\n",
     "})\n",
-    "print(features_summary)\n"
+    "print(features_summary)"
    ]
   },
   {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -472,13 +472,19 @@
     }
    ],
    "source": [
-    "# Check for missing values\n",
     "print(df.isnull().sum())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +497,6 @@
     }
    ],
    "source": [
-    "\n",
     "numerical_cols = [\"No_of_Attributes\", \"No_of_Records\"]\n",
     "scaler = StandardScaler()\n",
     "df[numerical_cols] = scaler.fit_transform(df[numerical_cols])\n",
@@ -823,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +843,7 @@
     "preprocessing_pipeline = {\n",
     "    \"scaler\": scaler,\n",
     "    \"feature_columns\": X.columns.tolist(),\n",
-    "    \"one_hot_columns\": list(X.columns)  # Save structure for one-hot encoding\n",
+    "    \"one_hot_columns\": list(X.columns) \n",
     "}\n",
     "pipeline_path = \"/workspaces/codespaces-models/visiobot-project/visiobot-backend/saved_models/preprocessing_pipeline.pkl\"\n",
     "joblib.dump(preprocessing_pipeline, pipeline_path)\n",
@@ -865,8 +870,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modeling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1565,22 +1577,14 @@
    "source": [
     "import os\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
-    "# --- assume X (DataFrame) and Y (one-hot DataFrame) are already loaded here ---\n",
-    "\n",
-    "# Convert one-hot to label indices for stratification\n",
     "y_labels = np.argmax(Y.values, axis=1)\n",
-    "\n",
-    "# Prepare StratifiedKFold\n",
     "skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
     "\n",
-    "# Containers\n",
     "accuracies = []\n",
     "r2_scores   = []\n",
     "n_classes   = Y.shape[1]\n",
     "conf_matrix = np.zeros((n_classes, n_classes), dtype=int)\n",
     "hits_at_2_all = []\n",
-    "hits_at_3_all = []\n",
     "\n",
     "def compute_hits_at_k(y_true, y_pred_probs, k):\n",
     "    hits = 0\n",
@@ -1589,12 +1593,10 @@
     "        if true_label in top_k_preds:\n",
     "            hits += 1\n",
     "    return hits / len(y_true)\n",
-    "# 10-fold stratified cross-validation\n",
     "for fold, (train_idx, test_idx) in enumerate(skf.split(X, y_labels), 1):\n",
     "    X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
     "    Y_train, Y_test = Y.iloc[train_idx], Y.iloc[test_idx]\n",
     "\n",
-    "    # Build model\n",
     "    model = Sequential([\n",
     "        Input(shape=(X_train.shape[1],)),\n",
     "        Dense(16, activation='relu'),\n",
@@ -1608,14 +1610,12 @@
     "        metrics=['accuracy', 'mse']\n",
     "    )\n",
     "\n",
-    "    # Early stopping\n",
     "    es = EarlyStopping(\n",
     "        monitor='val_loss',\n",
     "        patience=10,\n",
     "        restore_best_weights=True\n",
     "    )\n",
     "\n",
-    "    # Train\n",
     "    history= model.fit(\n",
     "        X_train, Y_train,\n",
     "        epochs=500,\n",
@@ -1625,11 +1625,9 @@
     "        callbacks=[es]\n",
     "    )\n",
     "\n",
-    "    # Evaluate\n",
     "    loss, acc, mse = model.evaluate(X_test, Y_test, verbose=0)\n",
     "    accuracies.append(acc)\n",
     "\n",
-    "    # Predictions → confusion matrix\n",
     "    y_pred         = model.predict(X_test)\n",
     "    y_pred_classes = np.argmax(y_pred, axis=1)\n",
     "    y_true_classes = np.argmax(Y_test.values, axis=1)\n",
@@ -1641,31 +1639,23 @@
     "    )\n",
     "    conf_matrix += cm\n",
     "\n",
-    "    # R² on the class indices\n",
     "    r2_scores.append(r2_score(y_true_classes, y_pred_classes))\n",
-    "     # Hits@2 and Hits@3\n",
     "    hit2 = compute_hits_at_k(y_true_classes, y_pred, k=2)\n",
-    "    hit3 = compute_hits_at_k(y_true_classes, y_pred, k=3)\n",
     "    hits_at_2_all.append(hit2)\n",
-    "    hits_at_3_all.append(hit3)\n",
-    "    print(f\"Fold {fold} — acc: {acc:.3f}, R²: {r2_scores[-1]:.3f}, Hits@2: {hit2:.3f}, Hits@3: {hit3:.3f}\")\n",
+    "    print(f\"Fold {fold} — acc: {acc:.3f}, R²: {r2_scores[-1]:.3f}, Hits@2: {hit2:.3f}\")\n",
     "\n",
-    "# Save final model (from last fold)\n",
     "save_dir = \"/workspaces/codespaces-models/visiobot-project/visiobot-backend/saved_models\"\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "model_path = os.path.join(save_dir, \"visiobot_model.keras\")\n",
     "model.save(model_path)\n",
     "print(\"Model saved successfully at\", model_path)\n",
     "\n",
-    "# Summary\n",
     "final_accuracy = np.mean(accuracies) * 100\n",
     "final_r2       = np.mean(r2_scores)\n",
     "final_hits2 = np.mean(hits_at_2_all)\n",
-    "final_hits3 = np.mean(hits_at_3_all)\n",
     "print(f\"\\nFinal Mean Accuracy: {final_accuracy:.2f}%\")\n",
     "print(f\"Final Mean R² Score: {final_r2:.4f}\")\n",
-    "\n",
-    "print(f\"Final Mean Hits@2: {final_hits2:.4f}\")\n"
+    "print(f\"Final Mean Hits@2: {final_hits2:.4f}\")"
    ]
   },
   {
@@ -1774,6 +1764,13 @@
    ],
    "source": [
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation"
    ]
   },
   {
@@ -1896,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1920,10 +1917,10 @@
     "\n",
     "TPR = np.sum(TP) / (np.sum(TP) + np.sum(FN))  # Sensitivity / Recall\n",
     "TNR = np.sum(TN) / (np.sum(TN) + np.sum(FP))  # Specificity\n",
-    "FPR = np.sum(FP) / (np.sum(FP) + np.sum(TN))  # False Positive Rate\n",
-    "FNR = np.sum(FN) / (np.sum(FN) + np.sum(TP))  # False Negative Rate\n",
-    "Precision = np.sum(TP) / (np.sum(TP) + np.sum(FP))  # Precision Calculation\n",
-    "F1 = 2 * (Precision * TPR) / (Precision + TPR)  # F1 Score Calculation\n",
+    "FPR = np.sum(FP) / (np.sum(FP) + np.sum(TN))  \n",
+    "FNR = np.sum(FN) / (np.sum(FN) + np.sum(TP))  \n",
+    "Precision = np.sum(TP) / (np.sum(TP) + np.sum(FP))  \n",
+    "F1 = 2 * (Precision * TPR) / (Precision + TPR)  \n",
     "\n",
     "print(f\"True Positive Rate (TPR / Sensitivity): {TPR:.4f}\")\n",
     "print(f\"True Negative Rate (TNR / Specificity): {TNR:.4f}\")\n",
@@ -1931,201 +1928,6 @@
     "print(f\"False Negative Rate (FNR): {FNR:.4f}\")\n",
     "print(f\"Precision: {Precision:.4f}\")\n",
     "print(f\"F1 Score: {F1:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset downloaded and saved as abalone_dataset.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    from ucimlrepo import fetch_ucirepo  \n",
-    "except ImportError:\n",
-    "    import os\n",
-    "    os.system(\"pip install ucimlrepo\")\n",
-    "    from ucimlrepo import fetch_ucirepo  \n",
-    "\n",
-    "import pandas as pd\n",
-    "abalone = fetch_ucirepo(id=1)  \n",
-    "X = abalone.data.features  \n",
-    "y = abalone.data.targets  \n",
-    "dataset = pd.concat([X, y], axis=1)\n",
-    "csv_filename = \"abalone_dataset.csv\"\n",
-    "dataset.to_csv(csv_filename, index=False)\n",
-    "print(f\"Dataset downloaded and saved as {csv_filename}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Statlog Image Segmentation dataset saved as 'statlog_image_segmentation_dataset.csv'\n",
-      "\n",
-      "Statlog Image Segmentation Dataset Metadata:\n",
-      "{'uci_id': 147, 'name': 'Statlog (Image Segmentation)', 'repository_url': 'https://archive.ics.uci.edu/dataset/147/statlog+image+segmentation', 'data_url': 'https://archive.ics.uci.edu/static/public/147/data.csv', 'abstract': 'This dataset is an image segmentation database similar to a database already present in the repository (Image segmentation database) but in a slightly different form.', 'area': 'Other', 'tasks': ['Classification'], 'characteristics': ['Multivariate'], 'num_instances': 2310, 'num_features': 19, 'feature_types': ['Real'], 'demographics': [], 'target_col': ['class'], 'index_col': None, 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 1990, 'last_updated': 'Thu Mar 21 2024', 'dataset_doi': '10.24432/C5P01G', 'creators': [], 'intro_paper': None, 'additional_info': {'summary': 'The instances were drawn randomly from a database of 7 outdoor images.  The images were handsegmented to create a classification for every pixel.  \\r\\n\\r\\nEach instance is a 3x3 region.\\r\\n', 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': '1.  region-centroid-col:  the column of the center pixel of the region.\\r\\n2.  region-centroid-row:  the row of the center pixel of the region.\\r\\n3.  region-pixel-count:  the number of pixels in a region = 9.\\r\\n4.  short-line-density-5:  the results of a line extractoin algorithm that counts how many lines of length 5 (any orientation) with low contrast, less than or equal to 5, go through the region.\\r\\n5.  short-line-density-2:  same as short-line-density-5 but counts lines of high contrast, greater than 5.\\r\\n6.  vedge-mean:  measure the contrast of horizontally adjacent pixels in the region.  There are 6, the mean and standard deviation are given.  This attribute is used as a vertical edge detector.\\r\\n7.  vegde-sd:  (see 6)\\r\\n8.  hedge-mean:  measures the contrast of vertically adjacent pixels. Used for horizontal line detection. \\r\\n9.  hedge-sd: (see 8).\\r\\n10. intensity-mean:  the average over the region of (R + G + B)/3\\r\\n11. rawred-mean: the average over the region of the R value.\\r\\n12. rawblue-mean: the average over the region of the B value.\\r\\n13. rawgreen-mean: the average over the region of the G value.\\r\\n14. exred-mean: measure the excess red:  (2R - (G + B))\\r\\n15. exblue-mean: measure the excess blue:  (2B - (G + R))\\r\\n16. exgreen-mean: measure the excess green:  (2G - (R + B))\\r\\n17. value-mean:  3-d nonlinear transformation of RGB. (Algorithm can be found in Foley and VanDam, Fundamentals of Interactive Computer Graphics)\\r\\n18. saturatoin-mean:  (see 17)\\r\\n19. hue-mean:  (see 17)\\r\\n\\r\\nClasses: \\r\\n1 = brickface, \\r\\n2 = sky, \\r\\n3 = foliage, \\r\\n4 = cement, \\r\\n5 = window, \\r\\n6 = path, \\r\\n7 = grass.\\r\\n', 'citation': None}}\n",
-      "\n",
-      "Statlog Image Segmentation Dataset Variables:\n",
-      "                    name     role        type demographic description units  \\\n",
-      "0    region-centroid-col  Feature     Integer        None        None  None   \n",
-      "1    region-centroid-row  Feature     Integer        None        None  None   \n",
-      "2     region-pixel-count  Feature     Integer        None        None  None   \n",
-      "3   short-line-density-5  Feature     Integer        None        None  None   \n",
-      "4   short-line-density-2  Feature     Integer        None        None  None   \n",
-      "5             vedge-mean  Feature  Continuous        None        None  None   \n",
-      "6               vedge-sd  Feature  Continuous        None        None  None   \n",
-      "7             hedge-mean  Feature  Continuous        None        None  None   \n",
-      "8               hedge-sd  Feature  Continuous        None        None  None   \n",
-      "9         intensity-mean  Feature  Continuous        None        None  None   \n",
-      "10           rawred-mean  Feature  Continuous        None        None  None   \n",
-      "11          rawblue-mean  Feature  Continuous        None        None  None   \n",
-      "12         rawgreen-mean  Feature  Continuous        None        None  None   \n",
-      "13            exred-mean  Feature  Continuous        None        None  None   \n",
-      "14           exblue-mean  Feature  Continuous        None        None  None   \n",
-      "15          exgreen-mean  Feature  Continuous        None        None  None   \n",
-      "16            value-mean  Feature  Continuous        None        None  None   \n",
-      "17       saturation-mean  Feature  Continuous        None        None  None   \n",
-      "18              hue-mean  Feature  Continuous        None        None  None   \n",
-      "19                 class   Target     Integer        None        None  None   \n",
-      "\n",
-      "   missing_values  \n",
-      "0              no  \n",
-      "1              no  \n",
-      "2              no  \n",
-      "3              no  \n",
-      "4              no  \n",
-      "5              no  \n",
-      "6              no  \n",
-      "7              no  \n",
-      "8              no  \n",
-      "9              no  \n",
-      "10             no  \n",
-      "11             no  \n",
-      "12             no  \n",
-      "13             no  \n",
-      "14             no  \n",
-      "15             no  \n",
-      "16             no  \n",
-      "17             no  \n",
-      "18             no  \n",
-      "19             no  \n"
-     ]
-    }
-   ],
-   "source": [
-    "# Try to import ucimlrepo, install if not available\n",
-    "try:\n",
-    "    from ucimlrepo import fetch_ucirepo\n",
-    "except ImportError:\n",
-    "    import os\n",
-    "    os.system(\"pip install ucimlrepo\")\n",
-    "    from ucimlrepo import fetch_ucirepo\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "# ========== Statlog (Image Segmentation) Dataset ==========\n",
-    "statlog_image_segmentation = fetch_ucirepo(id=147)\n",
-    "\n",
-    "# Combine features and targets\n",
-    "X_segmentation = statlog_image_segmentation.data.features\n",
-    "y_segmentation = statlog_image_segmentation.data.targets\n",
-    "dataset_segmentation = pd.concat([X_segmentation, y_segmentation], axis=1)\n",
-    "\n",
-    "# Save to CSV\n",
-    "segmentation_csv = \"statlog_image_segmentation_dataset.csv\"\n",
-    "dataset_segmentation.to_csv(segmentation_csv, index=False)\n",
-    "print(f\"Statlog Image Segmentation dataset saved as '{segmentation_csv}'\")\n",
-    "\n",
-    "# Print metadata and variable info\n",
-    "print(\"\\nStatlog Image Segmentation Dataset Metadata:\")\n",
-    "print(statlog_image_segmentation.metadata)\n",
-    "\n",
-    "print(\"\\nStatlog Image Segmentation Dataset Variables:\")\n",
-    "print(statlog_image_segmentation.variables)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🔎 Checking Feature Variance...\n",
-      "No_of_Attributes                             1.002506\n",
-      "No_of_Records                                1.002506\n",
-      "Data_Dimensions_2D                           0.111523\n",
-      "Data_Dimensions_Hierarchical                 0.167763\n",
-      "Data_Dimensions_ND                           0.131303\n",
-      "Primary_Variable (Data Type)_continuous      0.238496\n",
-      "Primary_Variable (Data Type)_geographical    0.080044\n",
-      "Primary_Variable (Data Type)_ordinal         0.192882\n",
-      "Task (Purpose)_distribution                  0.250000\n",
-      "Task (Purpose)_relationship                  0.129568\n",
-      "Task (Purpose)_trends                        0.118891\n",
-      "Target Audience_Non-Expert                   0.250119\n",
-      "dtype: float64\n",
-      "\n",
-      "⚠️ Low Variance Features:\n",
-      " Series([], dtype: float64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Check Feature Variance\n",
-    "print(\"\\n🔎 Checking Feature Variance...\")\n",
-    "feature_variance = df.var()\n",
-    "print(feature_variance)\n",
-    "\n",
-    "# Identify Features with Low Variance\n",
-    "low_variance_features = feature_variance[feature_variance < 0.0001]\n",
-    "print(\"\\n⚠️ Low Variance Features:\\n\", low_variance_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Feature Name         Type\n",
-      "0             Sex  Categorical\n",
-      "1          Length  Categorical\n",
-      "2        Diameter  Categorical\n",
-      "3          Height  Categorical\n",
-      "4    Whole_weight  Categorical\n",
-      "5  Shucked_weight  Categorical\n",
-      "6  Viscera_weight  Categorical\n",
-      "7    Shell_weight  Categorical\n"
-     ]
-    }
-   ],
-   "source": [
-    "features = pd.DataFrame({\n",
-    "    'Feature Name': X.columns,\n",
-    "    'Type': ['Numerical' if col in ['No_of_Attributes', 'No_of_Records'] else 'Categorical' for col in X.columns]\n",
-    "})\n",
-    "print(features)\n"
    ]
   }
  ],
